// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDiagramGenerationSpec + createDiagramGenerationCollaborator > golden snapshot: stable diagram from fixture spec 1`] = `
{
  "annularBand": {
    "center": {
      "x": 0,
      "y": 0,
    },
    "rInner": 118,
    "rOuter": 129.8,
    "sweepRad": 3.141592653589793,
    "thetaLeft": 3.141592653589793,
  },
  "dividorArc": {
    "radiusK": 1.25,
  },
  "hand": {
    "arm": {
      "end": {
        "x": 94.73397714174978,
        "y": -66.3180456203772,
      },
      "start": {
        "x": 4.833366180701519,
        "y": -3.3835737561416943,
      },
    },
    "bossCircle": {
      "center": {
        "x": 0,
        "y": 0,
      },
      "radius": 5.9,
    },
    "theta": 5.67242915205982,
    "timeHours": 19.33416666666667,
  },
  "homeMenuTrigger": {
    "center": {
      "x": -118.00000000000001,
      "y": -130.69383352652403,
    },
    "cornerRadius": 4.484,
    "height": 15.34,
    "label": "Menu",
    "labelSize": 4.956,
    "width": 23.6,
  },
  "mainLabel": {
    "anchor": {
      "x": -124.85308486872034,
      "y": -150.871833526524,
    },
    "content": "High tide at 23:06",
    "fontSize": 5.31,
    "hAlign": "left",
  },
  "meta": {
    "title": "home-tide-diagram",
  },
  "paintOrder": {
    "overrides": [
      {
        "name": "Hand",
        "place": "before",
        "relativeTo": "AnnularBand",
      },
    ],
  },
  "refArc": {
    "center": {
      "x": 0,
      "y": 0,
    },
    "refRadius": 118,
    "sweepRad": 3.141592653589793,
    "thetaLeft": 3.141592653589793,
    "thetaRight": 6.283185307179586,
  },
  "tickLabels": [
    {
      "anchor": {
        "x": -122.02108486872035,
        "y": -18.424380581290595,
      },
      "content": "01",
      "fontSize": 4.72,
      "hour": 1,
      "theta": 3.2724923474893677,
    },
    {
      "anchor": {
        "x": -118.8803551447008,
        "y": -34.21389515694764,
      },
      "content": "02",
      "fontSize": 4.72,
      "hour": 2,
      "theta": 3.4033920413889427,
    },
    {
      "anchor": {
        "x": -113.7055495842941,
        "y": -49.458380754901036,
      },
      "content": "03",
      "fontSize": 4.72,
      "hour": 3,
      "theta": 3.5342917352885173,
    },
    {
      "anchor": {
        "x": -106.58521054536602,
        "y": -63.89699999999996,
      },
      "content": "04",
      "fontSize": 4.72,
      "hour": 4,
      "theta": 3.665191429188092,
    },
    {
      "anchor": {
        "x": -97.64116900300348,
        "y": -77.28270411381928,
      },
      "content": "05",
      "fontSize": 4.72,
      "hour": 5,
      "theta": 3.796091123087667,
    },
    {
      "anchor": {
        "x": -87.02645998775317,
        "y": -89.38645998775314,
      },
      "content": "06",
      "fontSize": 4.72,
      "hour": 6,
      "theta": 3.9269908169872414,
    },
    {
      "anchor": {
        "x": -74.92270411381931,
        "y": -100.00116900300345,
      },
      "content": "07",
      "fontSize": 4.72,
      "hour": 7,
      "theta": 4.057890510886816,
    },
    {
      "anchor": {
        "x": -61.537000000000056,
        "y": -108.94521054536598,
      },
      "content": "08",
      "fontSize": 4.72,
      "hour": 8,
      "theta": 4.1887902047863905,
    },
    {
      "anchor": {
        "x": -47.09838075490113,
        "y": -116.06554958429408,
      },
      "content": "09",
      "fontSize": 4.72,
      "hour": 9,
      "theta": 4.319689898685965,
    },
    {
      "anchor": {
        "x": -31.853895156947623,
        "y": -121.2403551447008,
      },
      "content": "10",
      "fontSize": 4.72,
      "hour": 10,
      "theta": 4.4505895925855405,
    },
    {
      "anchor": {
        "x": -16.064380581290635,
        "y": -124.38108486872035,
      },
      "content": "11",
      "fontSize": 4.72,
      "hour": 11,
      "theta": 4.581489286485115,
    },
    {
      "anchor": {
        "x": -2.26083270237392e-14,
        "y": -125.434,
      },
      "content": "12",
      "fontSize": 4.72,
      "hour": 12,
      "theta": 4.71238898038469,
    },
    {
      "anchor": {
        "x": 16.06438058129059,
        "y": -124.38108486872035,
      },
      "content": "13",
      "fontSize": 4.72,
      "hour": 13,
      "theta": 4.843288674284264,
    },
    {
      "anchor": {
        "x": 31.853895156947583,
        "y": -121.24035514470081,
      },
      "content": "14",
      "fontSize": 4.72,
      "hour": 14,
      "theta": 4.974188368183839,
    },
    {
      "anchor": {
        "x": 47.098380754901086,
        "y": -116.06554958429409,
      },
      "content": "15",
      "fontSize": 4.72,
      "hour": 15,
      "theta": 5.105088062083414,
    },
    {
      "anchor": {
        "x": 61.53699999999992,
        "y": -108.94521054536605,
      },
      "content": "16",
      "fontSize": 4.72,
      "hour": 16,
      "theta": 5.235987755982988,
    },
    {
      "anchor": {
        "x": 74.92270411381926,
        "y": -100.00116900300348,
      },
      "content": "17",
      "fontSize": 4.72,
      "hour": 17,
      "theta": 5.366887449882563,
    },
    {
      "anchor": {
        "x": 87.02645998775313,
        "y": -89.38645998775317,
      },
      "content": "18",
      "fontSize": 4.72,
      "hour": 18,
      "theta": 5.497787143782138,
    },
    {
      "anchor": {
        "x": 97.64116900300345,
        "y": -77.2827041138193,
      },
      "content": "19",
      "fontSize": 4.72,
      "hour": 19,
      "theta": 5.6286868376817125,
    },
    {
      "anchor": {
        "x": 106.58521054536602,
        "y": -63.896999999999956,
      },
      "content": "20",
      "fontSize": 4.72,
      "hour": 20,
      "theta": 5.759586531581288,
    },
    {
      "anchor": {
        "x": 113.70554958429408,
        "y": -49.458380754901135,
      },
      "content": "21",
      "fontSize": 4.72,
      "hour": 21,
      "theta": 5.890486225480862,
    },
    {
      "anchor": {
        "x": 118.8803551447008,
        "y": -34.21389515694763,
      },
      "content": "22",
      "fontSize": 4.72,
      "hour": 22,
      "theta": 6.021385919380437,
    },
    {
      "anchor": {
        "x": 122.02108486872035,
        "y": -18.42438058129064,
      },
      "content": "23",
      "fontSize": 4.72,
      "hour": 23,
      "theta": 6.152285613280012,
    },
  ],
  "tickMarks": [
    {
      "bandOuterInward": {
        "end": {
          "x": -118,
          "y": 1.4450832229938766e-14,
        },
        "start": {
          "x": -129.8,
          "y": 1.5895915452932646e-14,
        },
      },
      "end": {
        "x": -129.8,
        "y": 1.5895915452932646e-14,
      },
      "hour": 0,
      "start": {
        "x": -118,
        "y": 1.4450832229938766e-14,
      },
      "theta": 3.141592653589793,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -126.34973313347842,
          "y": -16.63425793652334,
        },
        "start": {
          "x": -128.6895430063206,
          "y": -16.942299750162665,
        },
      },
      "end": {
        "x": -119.33030351495184,
        "y": -15.710132495605377,
      },
      "hour": 1,
      "start": {
        "x": -116.99049364210964,
        "y": -15.402090681966056,
      },
      "theta": 3.2724923474893677,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -123.09758730227888,
          "y": -32.983899107865255,
        },
        "start": {
          "x": -125.37717225232107,
          "y": -33.5947120543072,
        },
      },
      "end": {
        "x": -116.25883245215226,
        "y": -31.151460268539402,
      },
      "hour": 2,
      "start": {
        "x": -113.97924750211006,
        "y": -30.540647322097453,
      },
      "theta": 3.4033920413889427,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -117.73920762323841,
          "y": -48.76917662060703,
        },
        "start": {
          "x": -119.91956331996505,
          "y": -49.672309520988634,
        },
      },
      "end": {
        "x": -111.19814053305848,
        "y": -46.059777919462185,
      },
      "hour": 3,
      "start": {
        "x": -109.01778483633184,
        "y": -45.15664501908057,
      },
      "theta": 3.5342917352885173,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -110.36627745828889,
          "y": -63.71999999999997,
        },
        "start": {
          "x": -112.41009741122016,
          "y": -64.89999999999996,
        },
      },
      "end": {
        "x": -104.23481759949506,
        "y": -60.179999999999964,
      },
      "hour": 4,
      "start": {
        "x": -102.19099764656379,
        "y": -58.999999999999964,
      },
      "theta": 3.665191429188092,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -101.10494968671502,
          "y": -77.58055651287137,
        },
        "start": {
          "x": -102.97726356980233,
          "y": -79.01723348533194,
        },
      },
      "end": {
        "x": -95.48800803745307,
        "y": -73.27052559548962,
      },
      "hour": 5,
      "start": {
        "x": -93.61569415436576,
        "y": -71.83384862302904,
      },
      "theta": 3.796091123087667,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -90.11368819441364,
          "y": -90.11368819441361,
        },
        "start": {
          "x": -91.7824601980139,
          "y": -91.78246019801387,
        },
      },
      "end": {
        "x": -85.10737218361288,
        "y": -85.10737218361285,
      },
      "hour": 6,
      "start": {
        "x": -83.43860018001263,
        "y": -83.4386001800126,
      },
      "theta": 3.9269908169872414,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -77.5805565128714,
          "y": -101.10494968671499,
        },
        "start": {
          "x": -79.01723348533197,
          "y": -102.9772635698023,
        },
      },
      "end": {
        "x": -73.27052559548964,
        "y": -95.48800803745304,
      },
      "hour": 7,
      "start": {
        "x": -71.83384862302907,
        "y": -93.61569415436573,
      },
      "theta": 4.057890510886816,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -63.72000000000006,
          "y": -110.36627745828885,
        },
        "start": {
          "x": -64.90000000000006,
          "y": -112.41009741122012,
        },
      },
      "end": {
        "x": -60.18000000000006,
        "y": -104.23481759949502,
      },
      "hour": 8,
      "start": {
        "x": -59.00000000000005,
        "y": -102.19099764656374,
      },
      "theta": 4.1887902047863905,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -48.76917662060712,
          "y": -117.73920762323837,
        },
        "start": {
          "x": -49.67230952098873,
          "y": -119.919563319965,
        },
      },
      "end": {
        "x": -46.05977791946227,
        "y": -111.19814053305845,
      },
      "hour": 9,
      "start": {
        "x": -45.156645019080656,
        "y": -109.01778483633181,
      },
      "theta": 4.319689898685965,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -32.983899107865234,
          "y": -123.09758730227888,
        },
        "start": {
          "x": -33.59471205430718,
          "y": -125.37717225232107,
        },
      },
      "end": {
        "x": -31.15146026853938,
        "y": -116.25883245215226,
      },
      "hour": 10,
      "start": {
        "x": -30.540647322097435,
        "y": -113.97924750211006,
      },
      "theta": 4.4505895925855405,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -16.63425793652338,
          "y": -126.34973313347841,
        },
        "start": {
          "x": -16.942299750162704,
          "y": -128.6895430063206,
        },
      },
      "end": {
        "x": -15.710132495605414,
        "y": -119.33030351495182,
      },
      "hour": 11,
      "start": {
        "x": -15.402090681966092,
        "y": -116.99049364210963,
      },
      "theta": 4.581489286485115,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -2.3410348212500806e-14,
          "y": -127.44000000000001,
        },
        "start": {
          "x": -2.3843873179398966e-14,
          "y": -129.8,
        },
      },
      "end": {
        "x": -2.2109773311806313e-14,
        "y": -120.36,
      },
      "hour": 12,
      "start": {
        "x": -2.167624834490815e-14,
        "y": -118,
      },
      "theta": 4.71238898038469,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 16.634257936523333,
          "y": -126.34973313347842,
        },
        "start": {
          "x": 16.942299750162658,
          "y": -128.6895430063206,
        },
      },
      "end": {
        "x": 15.71013249560537,
        "y": -119.33030351495184,
      },
      "hour": 13,
      "start": {
        "x": 15.40209068196605,
        "y": -116.99049364210964,
      },
      "theta": 4.843288674284264,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 32.98389910786519,
          "y": -123.0975873022789,
        },
        "start": {
          "x": 33.59471205430714,
          "y": -125.37717225232109,
        },
      },
      "end": {
        "x": 31.151460268539342,
        "y": -116.25883245215228,
      },
      "hour": 14,
      "start": {
        "x": 30.540647322097396,
        "y": -113.97924750211007,
      },
      "theta": 4.974188368183839,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 48.76917662060708,
          "y": -117.73920762323839,
        },
        "start": {
          "x": 49.672309520988684,
          "y": -119.91956331996502,
        },
      },
      "end": {
        "x": 46.059777919462235,
        "y": -111.19814053305846,
      },
      "hour": 15,
      "start": {
        "x": 45.15664501908062,
        "y": -109.01778483633183,
      },
      "theta": 5.105088062083414,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 63.71999999999992,
          "y": -110.36627745828892,
        },
        "start": {
          "x": 64.89999999999992,
          "y": -112.41009741122019,
        },
      },
      "end": {
        "x": 60.17999999999992,
        "y": -104.23481759949509,
      },
      "hour": 16,
      "start": {
        "x": 58.99999999999992,
        "y": -102.1909976465638,
      },
      "theta": 5.235987755982988,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 77.58055651287135,
          "y": -101.10494968671502,
        },
        "start": {
          "x": 79.01723348533193,
          "y": -102.97726356980233,
        },
      },
      "end": {
        "x": 73.2705255954896,
        "y": -95.48800803745307,
      },
      "hour": 17,
      "start": {
        "x": 71.83384862302903,
        "y": -93.61569415436576,
      },
      "theta": 5.366887449882563,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 90.1136881944136,
          "y": -90.11368819441364,
        },
        "start": {
          "x": 91.78246019801385,
          "y": -91.7824601980139,
        },
      },
      "end": {
        "x": 85.10737218361284,
        "y": -85.10737218361288,
      },
      "hour": 18,
      "start": {
        "x": 83.43860018001259,
        "y": -83.43860018001263,
      },
      "theta": 5.497787143782138,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 101.10494968671499,
          "y": -77.5805565128714,
        },
        "start": {
          "x": 102.9772635698023,
          "y": -79.01723348533197,
        },
      },
      "end": {
        "x": 95.48800803745304,
        "y": -73.27052559548964,
      },
      "hour": 19,
      "start": {
        "x": 93.61569415436573,
        "y": -71.83384862302907,
      },
      "theta": 5.6286868376817125,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 110.36627745828889,
          "y": -63.71999999999996,
        },
        "start": {
          "x": 112.41009741122016,
          "y": -64.89999999999996,
        },
      },
      "end": {
        "x": 104.23481759949506,
        "y": -60.17999999999996,
      },
      "hour": 20,
      "start": {
        "x": 102.19099764656379,
        "y": -58.99999999999996,
      },
      "theta": 5.759586531581288,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 117.73920762323837,
          "y": -48.769176620607126,
        },
        "start": {
          "x": 119.919563319965,
          "y": -49.67230952098874,
        },
      },
      "end": {
        "x": 111.19814053305845,
        "y": -46.05977791946228,
      },
      "hour": 21,
      "start": {
        "x": 109.01778483633181,
        "y": -45.15664501908066,
      },
      "theta": 5.890486225480862,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 123.09758730227888,
          "y": -32.98389910786524,
        },
        "start": {
          "x": 125.37717225232107,
          "y": -33.59471205430719,
        },
      },
      "end": {
        "x": 116.25883245215226,
        "y": -31.151460268539388,
      },
      "hour": 22,
      "start": {
        "x": 113.97924750211006,
        "y": -30.540647322097442,
      },
      "theta": 6.021385919380437,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 126.34973313347841,
          "y": -16.634257936523387,
        },
        "start": {
          "x": 128.6895430063206,
          "y": -16.94229975016271,
        },
      },
      "end": {
        "x": 119.33030351495182,
        "y": -15.710132495605421,
      },
      "hour": 23,
      "start": {
        "x": 116.99049364210963,
        "y": -15.402090681966099,
      },
      "theta": 6.152285613280012,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 118,
          "y": -2.890166445987753e-14,
        },
        "start": {
          "x": 129.8,
          "y": -3.179183090586529e-14,
        },
      },
      "end": {
        "x": 129.8,
        "y": -3.179183090586529e-14,
      },
      "hour": 24,
      "start": {
        "x": 118,
        "y": -2.890166445987753e-14,
      },
      "theta": 6.283185307179586,
    },
  ],
  "tideMarks": [
    {
      "heightLabel": {
        "anchor": {
          "x": -127.02536323294703,
          "y": -67.74244382614101,
        },
        "arcCenter": {
          "x": 0,
          "y": 0,
        },
        "arcSweepRad": 0.13278688524590163,
        "content": "0.94 m",
        "fontSize": 5.31,
      },
      "temporalClass": "past",
      "theta": 3.6979163526629857,
      "timeHours": 4.25,
      "timePointer": {
        "circle": {
          "center": {
            "x": -116.32464089298576,
            "y": -72.33531004784905,
          },
          "radius": 2.245031991499648,
        },
        "triangle": {
          "v1": {
            "x": -111.42891345119159,
            "y": -69.29095109093868,
          },
          "v2": {
            "x": -114.4902755296931,
            "y": -73.62963317474166,
          },
          "v3": {
            "x": -116.67416497031728,
            "y": -70.11765327498667,
          },
        },
      },
    },
    {
      "heightLabel": {
        "anchor": {
          "x": -32.82217573480843,
          "y": -140.16842147942364,
        },
        "arcCenter": {
          "x": 0,
          "y": 0,
        },
        "arcSweepRad": 0.13278688524590163,
        "content": "4.70 m",
        "fontSize": 5.31,
      },
      "temporalClass": "past",
      "theta": 4.548764363010221,
      "timeHours": 10.75,
      "timePointer": {
        "circle": {
          "center": {
            "x": -22.313599585501557,
            "y": -135.15147957805883,
          },
          "radius": 2.2450319914996557,
        },
        "triangle": {
          "v1": {
            "x": -21.374492436944386,
            "y": -129.4633914628495,
          },
          "v2": {
            "x": -20.13099480931149,
            "y": -134.62573721357865,
          },
          "v3": {
            "x": -24.211379464330093,
            "y": -133.9520629805539,
          },
        },
      },
    },
    {
      "heightLabel": {
        "anchor": {
          "x": 79.71005640413539,
          "y": -119.87822366071978,
        },
        "arcCenter": {
          "x": 0,
          "y": 0,
        },
        "arcSweepRad": 0.13278688524590163,
        "content": "0.89 m",
        "fontSize": 5.31,
      },
      "temporalClass": "past",
      "theta": 5.365578452943567,
      "timeHours": 16.99,
      "timePointer": {
        "circle": {
          "center": {
            "x": 83.24647854288376,
            "y": -108.78346826981449,
          },
          "radius": 2.2450319914996473,
        },
        "triangle": {
          "v1": {
            "x": 79.74290383758932,
            "y": -104.20512436319522,
          },
          "v2": {
            "x": 84.3573246359984,
            "y": -106.83252244784279,
          },
          "v3": {
            "x": 81.07302174835236,
            "y": -109.34583310260727,
          },
        },
      },
    },
    {
      "heightLabel": {
        "anchor": {
          "x": 141.52455860091175,
          "y": -26.368179929928818,
        },
        "arcCenter": {
          "x": 0,
          "y": 0,
        },
        "arcSweepRad": 0.13278688524590163,
        "content": "4.80 m",
        "fontSize": 5.31,
      },
      "temporalClass": "future",
      "theta": 6.165375582669969,
      "timeHours": 23.1,
      "timePointer": {
        "circle": {
          "center": {
            "x": 136.03160018945113,
            "y": -16.100400880036094,
          },
          "radius": 2.2450319914996397,
        },
        "triangle": {
          "v1": {
            "x": 130.30647064779762,
            "y": -15.422787144827627,
          },
          "v2": {
            "x": 135.4064486705147,
            "y": -13.944164756317658,
          },
          "v3": {
            "x": 134.92035833028572,
            "y": -18.051121304211595,
          },
        },
      },
    },
  ],
  "timeNowClock": {
    "hhmm": {
      "anchor": {
        "x": 136.97636352531228,
        "y": -150.871833526524,
      },
      "content": "19:20",
      "fontSize": 5.31,
      "hAlign": "right",
    },
    "seconds": {
      "anchor": {
        "x": 146.53436352531227,
        "y": -150.871833526524,
      },
      "content": "03",
      "fontSize": 5.31,
      "hAlign": "right",
    },
    "secondsColon": {
      "anchor": {
        "x": 140.1623635253123,
        "y": -150.871833526524,
      },
      "content": ":",
      "fontSize": 5.31,
      "hAlign": "right",
    },
  },
  "timeNowDate": {
    "anchor": {
      "x": 111.48836352531228,
      "y": -150.871833526524,
    },
    "content": "Mon 23 Mar",
    "fontSize": 5.31,
    "hAlign": "right",
  },
  "timeNowLocation": {
    "anchor": {
      "x": 146.53436352531227,
      "y": -143.20183352652398,
    },
    "content": "Lymington",
    "fontSize": 5.31,
    "hAlign": "right",
  },
  "version": 1,
}
`;

exports[`buildDiagramGenerationSpec + createDiagramGenerationCollaborator > golden snapshot: stable scene from fixture spec 1`] = `
{
  "meta": {
    "previewFrame": {
      "maxX": 148.5,
      "maxY": 6.9,
      "minX": -148.5,
      "minY": -152.933833526524,
    },
    "title": "home-tide-diagram",
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "center": {
                  "x": 0,
                  "y": 0,
                },
                "kind": "circle",
                "radius": 5.9,
              },
            ],
            "kind": "group",
            "name": "BossCircle",
          },
          {
            "children": [
              {
                "end": {
                  "x": 94.73397714174978,
                  "y": -66.3180456203772,
                },
                "kind": "line",
                "start": {
                  "x": 4.833366180701519,
                  "y": -3.3835737561416943,
                },
              },
            ],
            "kind": "group",
            "name": "Arm",
          },
        ],
        "kind": "group",
        "name": "Hand",
      },
      {
        "children": [
          {
            "center": {
              "x": 0,
              "y": 0,
            },
            "fillOnly": true,
            "kind": "annularSector",
            "rInner": 118,
            "rOuter": 129.8,
            "sweepRad": 3.141592653589793,
            "thetaStart": 3.141592653589793,
          },
          {
            "center": {
              "x": 0,
              "y": 0,
            },
            "kind": "arc",
            "start": {
              "x": -129.8,
              "y": 1.5895915452932646e-14,
            },
            "sweepRad": 3.141592653589793,
          },
          {
            "end": {
              "x": -129.8,
              "y": 1.5895915452932646e-14,
            },
            "kind": "line",
            "start": {
              "x": -118,
              "y": 1.4450832229938766e-14,
            },
          },
          {
            "end": {
              "x": 129.8,
              "y": -3.179183090586529e-14,
            },
            "kind": "line",
            "start": {
              "x": 118,
              "y": -2.890166445987753e-14,
            },
          },
        ],
        "kind": "group",
        "name": "AnnularBand",
      },
      {
        "children": [
          {
            "center": {
              "x": 0,
              "y": 0,
            },
            "kind": "arc",
            "start": {
              "x": -118,
              "y": 1.4450832229938766e-14,
            },
            "sweepRad": 3.141592653589793,
          },
        ],
        "kind": "group",
        "name": "RefArc",
      },
      {
        "children": [
          {
            "center": {
              "x": 0,
              "y": 0,
            },
            "kind": "arc",
            "start": {
              "x": -147.5,
              "y": 1.806354028742346e-14,
            },
            "sweepRad": 3.141592653589793,
          },
        ],
        "kind": "group",
        "name": "Dividor",
      },
      {
        "children": [
          {
            "end": {
              "x": -129.8,
              "y": 1.5895915452932646e-14,
            },
            "kind": "line",
            "start": {
              "x": -118,
              "y": 1.4450832229938766e-14,
            },
          },
          {
            "end": {
              "x": -118,
              "y": 1.4450832229938766e-14,
            },
            "kind": "line",
            "start": {
              "x": -129.8,
              "y": 1.5895915452932646e-14,
            },
          },
          {
            "end": {
              "x": -119.33030351495184,
              "y": -15.710132495605377,
            },
            "kind": "line",
            "start": {
              "x": -116.99049364210964,
              "y": -15.402090681966056,
            },
          },
          {
            "end": {
              "x": -126.34973313347842,
              "y": -16.63425793652334,
            },
            "kind": "line",
            "start": {
              "x": -128.6895430063206,
              "y": -16.942299750162665,
            },
          },
          {
            "end": {
              "x": -116.25883245215226,
              "y": -31.151460268539402,
            },
            "kind": "line",
            "start": {
              "x": -113.97924750211006,
              "y": -30.540647322097453,
            },
          },
          {
            "end": {
              "x": -123.09758730227888,
              "y": -32.983899107865255,
            },
            "kind": "line",
            "start": {
              "x": -125.37717225232107,
              "y": -33.5947120543072,
            },
          },
          {
            "end": {
              "x": -111.19814053305848,
              "y": -46.059777919462185,
            },
            "kind": "line",
            "start": {
              "x": -109.01778483633184,
              "y": -45.15664501908057,
            },
          },
          {
            "end": {
              "x": -117.73920762323841,
              "y": -48.76917662060703,
            },
            "kind": "line",
            "start": {
              "x": -119.91956331996505,
              "y": -49.672309520988634,
            },
          },
          {
            "end": {
              "x": -104.23481759949506,
              "y": -60.179999999999964,
            },
            "kind": "line",
            "start": {
              "x": -102.19099764656379,
              "y": -58.999999999999964,
            },
          },
          {
            "end": {
              "x": -110.36627745828889,
              "y": -63.71999999999997,
            },
            "kind": "line",
            "start": {
              "x": -112.41009741122016,
              "y": -64.89999999999996,
            },
          },
          {
            "end": {
              "x": -95.48800803745307,
              "y": -73.27052559548962,
            },
            "kind": "line",
            "start": {
              "x": -93.61569415436576,
              "y": -71.83384862302904,
            },
          },
          {
            "end": {
              "x": -101.10494968671502,
              "y": -77.58055651287137,
            },
            "kind": "line",
            "start": {
              "x": -102.97726356980233,
              "y": -79.01723348533194,
            },
          },
          {
            "end": {
              "x": -85.10737218361288,
              "y": -85.10737218361285,
            },
            "kind": "line",
            "start": {
              "x": -83.43860018001263,
              "y": -83.4386001800126,
            },
          },
          {
            "end": {
              "x": -90.11368819441364,
              "y": -90.11368819441361,
            },
            "kind": "line",
            "start": {
              "x": -91.7824601980139,
              "y": -91.78246019801387,
            },
          },
          {
            "end": {
              "x": -73.27052559548964,
              "y": -95.48800803745304,
            },
            "kind": "line",
            "start": {
              "x": -71.83384862302907,
              "y": -93.61569415436573,
            },
          },
          {
            "end": {
              "x": -77.5805565128714,
              "y": -101.10494968671499,
            },
            "kind": "line",
            "start": {
              "x": -79.01723348533197,
              "y": -102.9772635698023,
            },
          },
          {
            "end": {
              "x": -60.18000000000006,
              "y": -104.23481759949502,
            },
            "kind": "line",
            "start": {
              "x": -59.00000000000005,
              "y": -102.19099764656374,
            },
          },
          {
            "end": {
              "x": -63.72000000000006,
              "y": -110.36627745828885,
            },
            "kind": "line",
            "start": {
              "x": -64.90000000000006,
              "y": -112.41009741122012,
            },
          },
          {
            "end": {
              "x": -46.05977791946227,
              "y": -111.19814053305845,
            },
            "kind": "line",
            "start": {
              "x": -45.156645019080656,
              "y": -109.01778483633181,
            },
          },
          {
            "end": {
              "x": -48.76917662060712,
              "y": -117.73920762323837,
            },
            "kind": "line",
            "start": {
              "x": -49.67230952098873,
              "y": -119.919563319965,
            },
          },
          {
            "end": {
              "x": -31.15146026853938,
              "y": -116.25883245215226,
            },
            "kind": "line",
            "start": {
              "x": -30.540647322097435,
              "y": -113.97924750211006,
            },
          },
          {
            "end": {
              "x": -32.983899107865234,
              "y": -123.09758730227888,
            },
            "kind": "line",
            "start": {
              "x": -33.59471205430718,
              "y": -125.37717225232107,
            },
          },
          {
            "end": {
              "x": -15.710132495605414,
              "y": -119.33030351495182,
            },
            "kind": "line",
            "start": {
              "x": -15.402090681966092,
              "y": -116.99049364210963,
            },
          },
          {
            "end": {
              "x": -16.63425793652338,
              "y": -126.34973313347841,
            },
            "kind": "line",
            "start": {
              "x": -16.942299750162704,
              "y": -128.6895430063206,
            },
          },
          {
            "end": {
              "x": -2.2109773311806313e-14,
              "y": -120.36,
            },
            "kind": "line",
            "start": {
              "x": -2.167624834490815e-14,
              "y": -118,
            },
          },
          {
            "end": {
              "x": -2.3410348212500806e-14,
              "y": -127.44000000000001,
            },
            "kind": "line",
            "start": {
              "x": -2.3843873179398966e-14,
              "y": -129.8,
            },
          },
          {
            "end": {
              "x": 15.71013249560537,
              "y": -119.33030351495184,
            },
            "kind": "line",
            "start": {
              "x": 15.40209068196605,
              "y": -116.99049364210964,
            },
          },
          {
            "end": {
              "x": 16.634257936523333,
              "y": -126.34973313347842,
            },
            "kind": "line",
            "start": {
              "x": 16.942299750162658,
              "y": -128.6895430063206,
            },
          },
          {
            "end": {
              "x": 31.151460268539342,
              "y": -116.25883245215228,
            },
            "kind": "line",
            "start": {
              "x": 30.540647322097396,
              "y": -113.97924750211007,
            },
          },
          {
            "end": {
              "x": 32.98389910786519,
              "y": -123.0975873022789,
            },
            "kind": "line",
            "start": {
              "x": 33.59471205430714,
              "y": -125.37717225232109,
            },
          },
          {
            "end": {
              "x": 46.059777919462235,
              "y": -111.19814053305846,
            },
            "kind": "line",
            "start": {
              "x": 45.15664501908062,
              "y": -109.01778483633183,
            },
          },
          {
            "end": {
              "x": 48.76917662060708,
              "y": -117.73920762323839,
            },
            "kind": "line",
            "start": {
              "x": 49.672309520988684,
              "y": -119.91956331996502,
            },
          },
          {
            "end": {
              "x": 60.17999999999992,
              "y": -104.23481759949509,
            },
            "kind": "line",
            "start": {
              "x": 58.99999999999992,
              "y": -102.1909976465638,
            },
          },
          {
            "end": {
              "x": 63.71999999999992,
              "y": -110.36627745828892,
            },
            "kind": "line",
            "start": {
              "x": 64.89999999999992,
              "y": -112.41009741122019,
            },
          },
          {
            "end": {
              "x": 73.2705255954896,
              "y": -95.48800803745307,
            },
            "kind": "line",
            "start": {
              "x": 71.83384862302903,
              "y": -93.61569415436576,
            },
          },
          {
            "end": {
              "x": 77.58055651287135,
              "y": -101.10494968671502,
            },
            "kind": "line",
            "start": {
              "x": 79.01723348533193,
              "y": -102.97726356980233,
            },
          },
          {
            "end": {
              "x": 85.10737218361284,
              "y": -85.10737218361288,
            },
            "kind": "line",
            "start": {
              "x": 83.43860018001259,
              "y": -83.43860018001263,
            },
          },
          {
            "end": {
              "x": 90.1136881944136,
              "y": -90.11368819441364,
            },
            "kind": "line",
            "start": {
              "x": 91.78246019801385,
              "y": -91.7824601980139,
            },
          },
          {
            "end": {
              "x": 95.48800803745304,
              "y": -73.27052559548964,
            },
            "kind": "line",
            "start": {
              "x": 93.61569415436573,
              "y": -71.83384862302907,
            },
          },
          {
            "end": {
              "x": 101.10494968671499,
              "y": -77.5805565128714,
            },
            "kind": "line",
            "start": {
              "x": 102.9772635698023,
              "y": -79.01723348533197,
            },
          },
          {
            "end": {
              "x": 104.23481759949506,
              "y": -60.17999999999996,
            },
            "kind": "line",
            "start": {
              "x": 102.19099764656379,
              "y": -58.99999999999996,
            },
          },
          {
            "end": {
              "x": 110.36627745828889,
              "y": -63.71999999999996,
            },
            "kind": "line",
            "start": {
              "x": 112.41009741122016,
              "y": -64.89999999999996,
            },
          },
          {
            "end": {
              "x": 111.19814053305845,
              "y": -46.05977791946228,
            },
            "kind": "line",
            "start": {
              "x": 109.01778483633181,
              "y": -45.15664501908066,
            },
          },
          {
            "end": {
              "x": 117.73920762323837,
              "y": -48.769176620607126,
            },
            "kind": "line",
            "start": {
              "x": 119.919563319965,
              "y": -49.67230952098874,
            },
          },
          {
            "end": {
              "x": 116.25883245215226,
              "y": -31.151460268539388,
            },
            "kind": "line",
            "start": {
              "x": 113.97924750211006,
              "y": -30.540647322097442,
            },
          },
          {
            "end": {
              "x": 123.09758730227888,
              "y": -32.98389910786524,
            },
            "kind": "line",
            "start": {
              "x": 125.37717225232107,
              "y": -33.59471205430719,
            },
          },
          {
            "end": {
              "x": 119.33030351495182,
              "y": -15.710132495605421,
            },
            "kind": "line",
            "start": {
              "x": 116.99049364210963,
              "y": -15.402090681966099,
            },
          },
          {
            "end": {
              "x": 126.34973313347841,
              "y": -16.634257936523387,
            },
            "kind": "line",
            "start": {
              "x": 128.6895430063206,
              "y": -16.94229975016271,
            },
          },
          {
            "end": {
              "x": 129.8,
              "y": -3.179183090586529e-14,
            },
            "kind": "line",
            "start": {
              "x": 118,
              "y": -2.890166445987753e-14,
            },
          },
          {
            "end": {
              "x": 118,
              "y": -2.890166445987753e-14,
            },
            "kind": "line",
            "start": {
              "x": 129.8,
              "y": -3.179183090586529e-14,
            },
          },
        ],
        "kind": "group",
        "name": "TickMark",
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "headCenter": {
                      "x": -116.32464089298576,
                      "y": -72.33531004784905,
                    },
                    "headSweepRad": -3.9415926535897916,
                    "kind": "timePointerPath",
                    "v1": {
                      "x": -111.42891345119159,
                      "y": -69.29095109093868,
                    },
                    "v2": {
                      "x": -114.4902755296931,
                      "y": -73.62963317474166,
                    },
                    "v3": {
                      "x": -116.67416497031728,
                      "y": -70.11765327498667,
                    },
                  },
                ],
                "kind": "group",
                "name": "TimePointerPast",
              },
              {
                "children": [
                  {
                    "center": {
                      "x": 0,
                      "y": 0,
                    },
                    "content": "0.94 m",
                    "kind": "arcText",
                    "radius": 143.96,
                    "size": 5.31,
                    "sweepRad": 0.13278688524590163,
                    "thetaStart": -2.6516623971395514,
                  },
                ],
                "kind": "group",
                "name": "HeightLabelPast",
              },
            ],
            "kind": "group",
            "name": "TideMark",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "headCenter": {
                      "x": -22.313599585501557,
                      "y": -135.15147957805883,
                    },
                    "headSweepRad": -3.941592653589788,
                    "kind": "timePointerPath",
                    "v1": {
                      "x": -21.374492436944386,
                      "y": -129.4633914628495,
                    },
                    "v2": {
                      "x": -20.13099480931149,
                      "y": -134.62573721357865,
                    },
                    "v3": {
                      "x": -24.211379464330093,
                      "y": -133.9520629805539,
                    },
                  },
                ],
                "kind": "group",
                "name": "TimePointerPast",
              },
              {
                "children": [
                  {
                    "center": {
                      "x": 0,
                      "y": 0,
                    },
                    "content": "4.70 m",
                    "kind": "arcText",
                    "radius": 143.95999999999998,
                    "size": 5.31,
                    "sweepRad": 0.13278688524590163,
                    "thetaStart": -1.8008143867923159,
                  },
                ],
                "kind": "group",
                "name": "HeightLabelPast",
              },
            ],
            "kind": "group",
            "name": "TideMark",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "headCenter": {
                      "x": 83.24647854288376,
                      "y": -108.78346826981449,
                    },
                    "headSweepRad": -3.941592653589793,
                    "kind": "timePointerPath",
                    "v1": {
                      "x": 79.74290383758932,
                      "y": -104.20512436319522,
                    },
                    "v2": {
                      "x": 84.3573246359984,
                      "y": -106.83252244784279,
                    },
                    "v3": {
                      "x": 81.07302174835236,
                      "y": -109.34583310260727,
                    },
                  },
                ],
                "kind": "group",
                "name": "TimePointerPast",
              },
              {
                "children": [
                  {
                    "center": {
                      "x": 0,
                      "y": 0,
                    },
                    "content": "0.89 m",
                    "kind": "arcText",
                    "radius": 143.96,
                    "size": 5.31,
                    "sweepRad": 0.13278688524590163,
                    "thetaStart": -0.9840002968589696,
                  },
                ],
                "kind": "group",
                "name": "HeightLabelPast",
              },
            ],
            "kind": "group",
            "name": "TideMark",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "headCenter": {
                      "x": 136.03160018945113,
                      "y": -16.100400880036094,
                    },
                    "headSweepRad": -3.9415926535897894,
                    "kind": "timePointerPath",
                    "v1": {
                      "x": 130.30647064779762,
                      "y": -15.422787144827627,
                    },
                    "v2": {
                      "x": 135.4064486705147,
                      "y": -13.944164756317658,
                    },
                    "v3": {
                      "x": 134.92035833028572,
                      "y": -18.051121304211595,
                    },
                  },
                ],
                "kind": "group",
                "name": "TimePointerFuture",
              },
              {
                "children": [
                  {
                    "center": {
                      "x": 0,
                      "y": 0,
                    },
                    "content": "4.80 m",
                    "kind": "arcText",
                    "radius": 143.96,
                    "size": 5.31,
                    "sweepRad": 0.13278688524590163,
                    "thetaStart": -0.18420316713256768,
                  },
                ],
                "kind": "group",
                "name": "HeightLabelFuture",
              },
            ],
            "kind": "group",
            "name": "TideMark",
          },
        ],
        "kind": "group",
        "name": "TideMarks",
      },
      {
        "children": [
          {
            "anchor": {
              "x": -122.02108486872035,
              "y": -18.424380581290595,
            },
            "angleRad": 0,
            "content": "01",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -118.8803551447008,
              "y": -34.21389515694764,
            },
            "angleRad": 0,
            "content": "02",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -113.7055495842941,
              "y": -49.458380754901036,
            },
            "angleRad": 0,
            "content": "03",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -106.58521054536602,
              "y": -63.89699999999996,
            },
            "angleRad": 0,
            "content": "04",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -97.64116900300348,
              "y": -77.28270411381928,
            },
            "angleRad": 0,
            "content": "05",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -87.02645998775317,
              "y": -89.38645998775314,
            },
            "angleRad": 0,
            "content": "06",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -74.92270411381931,
              "y": -100.00116900300345,
            },
            "angleRad": 0,
            "content": "07",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -61.537000000000056,
              "y": -108.94521054536598,
            },
            "angleRad": 0,
            "content": "08",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -47.09838075490113,
              "y": -116.06554958429408,
            },
            "angleRad": 0,
            "content": "09",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -31.853895156947623,
              "y": -121.2403551447008,
            },
            "angleRad": 0,
            "content": "10",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -16.064380581290635,
              "y": -124.38108486872035,
            },
            "angleRad": 0,
            "content": "11",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -2.26083270237392e-14,
              "y": -125.434,
            },
            "angleRad": 0,
            "content": "12",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 16.06438058129059,
              "y": -124.38108486872035,
            },
            "angleRad": 0,
            "content": "13",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 31.853895156947583,
              "y": -121.24035514470081,
            },
            "angleRad": 0,
            "content": "14",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 47.098380754901086,
              "y": -116.06554958429409,
            },
            "angleRad": 0,
            "content": "15",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 61.53699999999992,
              "y": -108.94521054536605,
            },
            "angleRad": 0,
            "content": "16",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 74.92270411381926,
              "y": -100.00116900300348,
            },
            "angleRad": 0,
            "content": "17",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 87.02645998775313,
              "y": -89.38645998775317,
            },
            "angleRad": 0,
            "content": "18",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 97.64116900300345,
              "y": -77.2827041138193,
            },
            "angleRad": 0,
            "content": "19",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 106.58521054536602,
              "y": -63.896999999999956,
            },
            "angleRad": 0,
            "content": "20",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 113.70554958429408,
              "y": -49.458380754901135,
            },
            "angleRad": 0,
            "content": "21",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 118.8803551447008,
              "y": -34.21389515694763,
            },
            "angleRad": 0,
            "content": "22",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 122.02108486872035,
              "y": -18.42438058129064,
            },
            "angleRad": 0,
            "content": "23",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
        ],
        "kind": "group",
        "name": "TickLabel",
      },
      {
        "children": [
          {
            "anchor": {
              "x": -124.85308486872034,
              "y": -150.871833526524,
            },
            "angleRad": 0,
            "content": "High tide at 23:06",
            "hAlign": "left",
            "kind": "text",
            "size": 5.31,
          },
        ],
        "kind": "group",
        "name": "MainLabel",
      },
      {
        "children": [
          {
            "anchor": {
              "x": 146.53436352531227,
              "y": -143.20183352652398,
            },
            "angleRad": 0,
            "content": "Lymington",
            "hAlign": "right",
            "kind": "text",
            "size": 5.31,
          },
        ],
        "kind": "group",
        "name": "TimeNowLocation",
      },
      {
        "children": [
          {
            "anchor": {
              "x": 111.48836352531228,
              "y": -150.871833526524,
            },
            "angleRad": 0,
            "content": "Mon 23 Mar",
            "hAlign": "right",
            "kind": "text",
            "size": 5.31,
          },
        ],
        "kind": "group",
        "name": "TimeNowDate",
      },
      {
        "children": [
          {
            "children": [
              {
                "anchor": {
                  "x": 136.97636352531228,
                  "y": -150.871833526524,
                },
                "angleRad": 0,
                "content": "19:20",
                "hAlign": "right",
                "kind": "text",
                "size": 5.31,
              },
            ],
            "kind": "group",
            "name": "TimeNowLabelHms",
          },
          {
            "children": [
              {
                "anchor": {
                  "x": 140.1623635253123,
                  "y": -150.871833526524,
                },
                "angleRad": 0,
                "content": ":",
                "hAlign": "right",
                "kind": "text",
                "size": 5.31,
              },
            ],
            "kind": "group",
            "name": "TimeNowLabelSecondsColon",
          },
          {
            "children": [
              {
                "anchor": {
                  "x": 146.53436352531227,
                  "y": -150.871833526524,
                },
                "angleRad": 0,
                "content": "03",
                "hAlign": "right",
                "kind": "text",
                "size": 5.31,
              },
            ],
            "kind": "group",
            "name": "TimeNowLabelSeconds",
          },
        ],
        "kind": "group",
        "name": "TimeNowClock",
      },
      {
        "children": [
          {
            "center": {
              "x": -118.00000000000001,
              "y": -130.69383352652403,
            },
            "height": 15.34,
            "kind": "roundedRect",
            "rx": 4.484,
            "width": 23.6,
          },
          {
            "children": [
              {
                "anchor": {
                  "x": -118.00000000000001,
                  "y": -130.69383352652403,
                },
                "angleRad": 0,
                "content": "Menu",
                "dominantBaseline": "middle",
                "hAlign": "center",
                "kind": "text",
                "size": 4.956,
              },
            ],
            "kind": "group",
            "name": "HomeMenuTriggerLabel",
          },
        ],
        "kind": "group",
        "name": "HomeMenuTrigger",
      },
    ],
    "kind": "group",
    "name": "tideDiagram",
  },
  "version": 2,
}
`;
